fixed button color glitch on mobile, uncommented needed if condition

--- a/lights/static/lights/style.css
+++ b/lights/static/lights/style.css
@@ -102,13 +102,17 @@ body {
 }
 
 @media (min-width:320px)  { /* smartphones, iPhone, portrait 480x320 phones */
-
+    .is_mobile_device { /* Can determine if on mobile in JQuery by checking this class' display tag*/
+        display: none;
+    }
 }
 @media (min-width:481px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
 
 }
 @media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-
+    .is_mobile_device {
+        display: block;
+    }
 }
 @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */
 
